--- a/styles/DigitalLogicCSS.css
+++ b/styles/DigitalLogicCSS.css
@@ -1,13 +1,13 @@
 h1 { text-align: left;  position: absolute; left: 300px;}   
-#orSelect { background-image:url("images/orGate.png"); }    
-#norSelect { background-image:url("images/norGate.png"); }      
-#andSelect { background-image:url("images/andGate.png"); }
-#nandSelect { background-image:url("images/nandGate.png"); }
-#xorSelect { background-image:url("images/xorGate.png"); }
-#notSelect { background-image:url("images/notGate.png"); }
-#connectSelect { background-image:url("images/connect.png"); }
-#wireSelect { background-image:url("images/wire.png"); }
-#trashSelect { background-image:url("images/trash.png"); }
+#orSelect { background-image:url("../images/orGate.png"); }    
+#norSelect { background-image:url("../images/norGate.png"); }      
+#andSelect { background-image:url("../images/andGate.png"); }
+#nandSelect { background-image:url("../images/nandGate.png"); }
+#xorSelect { background-image:url("../images/xorGate.png"); }
+#notSelect { background-image:url("../images/notGate.png"); }
+#connectSelect { background-image:url("../images/connect.png"); }
+#wireSelect { background-image:url("../images/wire.png"); }
+#trashSelect { background-image:url("../images/trash.png"); }
 #dragContainer { left: 80px; top: 80px; position: absolute; border-style: solid; }
 #selectorContainer { left: 490px; top: 84px; position: absolute; }   
 .dragSelect
